--- a/image_publisher/package.xml
+++ b/image_publisher/package.xml
@@ -30,6 +30,8 @@
   <depend>image_transport</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
+  <depend>std_msgs</depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
